# 27-media-player

./: .gitignore  CMakeLists.txt  README.md  VideoPlayer.pro  conf  nijetoto.to  tags  videoplayer.cpp  videoplayer.h  videoplayer.ui
build-VideoPlayer-Desktop-Debug/: Makefile  VideoPlayer  moc_videoplayer.cpp  ui_videoplayer.h
headers/: annotation.h  commands.h  moc_annotation.cpp_parameters  moc_commands.cpp_parameters  moc_playlist.cpp_parameters  moc_rightClickMenu.cpp_parameters  moc_subtitles.cpp_parameters  moc_videoplayer.cpp_parameters  playlist.h  rightClickMenu.h  subtitles.h  videoplayer.h
res/: VideoPlayer_en_US.ts  videoplayer.ui
src/: VideoPlayer.pro  VideoPlayer.pro.user.793ba1a  VideoPlayer.supp  annotation.cpp  annotation.cpp.autosave  commands.cpp  main.cpp  playlist.cpp  rightClickMenu.cpp  subtitles.cpp  subtitles.h  videoplayer.cpp
